--- a/MKSK_Lahjapaja_CIM/Views/Shared/_Layout.cshtml
+++ b/MKSK_Lahjapaja_CIM/Views/Shared/_Layout.cshtml
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    @*<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />*@
     <link href="../../Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/jquery.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/jquery.dataTables.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+    @*<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />*@
     
     <script src="../../Scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="../../Scripts/bootstrap.js" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="../../Scripts/jquery.dataTables.min.js" type="text/javascript"></script>
     @*<script src="../../Scripts/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>*@
-
 
         <script type="text/javascript">
             $(document).ready(function () {
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">@Html.ActionLink("Logo here","Index","Home")</a>
+          <a class="brand" href="#">@Html.ActionLink("Logo could be here","Index","Home")</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -49,9 +49,6 @@
      @RenderBody()
     </div> <!-- /container -->
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
 @*    <script src="../assets/js/jquery.js"></script>
     <script src="../assets/js/bootstrap-transition.js"></script>
     <script src="../assets/js/bootstrap-alert.js"></script>
@@ -65,8 +62,6 @@
     <script src="../assets/js/bootstrap-collapse.js"></script>
     <script src="../assets/js/bootstrap-carousel.js"></script>
     <script src="../assets/js/bootstrap-typeahead.js"></script>*@
-
-
 
     <div class="page">
     </div>
