--- a/Lahjapaja_CIM/Views/Home/Index.cshtml
+++ b/Lahjapaja_CIM/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <h2>@ViewBag.Message</h2>
-<p>
-    To learn more about ASP.NET MVC visit <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-</p>
+<h1 style="margin-top:30px">
+Welcome to Lahjapaja!
+</h1>
