--- a/Lahjapaja_CIM/Views/Account/LogOn.cshtml
+++ b/Lahjapaja_CIM/Views/Account/LogOn.cshtml
@@ -5,9 +5,7 @@
 }
 
 <h2>Log On</h2>
-<p>
-    Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
-</p>
+
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -16,6 +14,9 @@
 
 @using (Html.BeginForm()) {
     <div>
+    <p style="margin-top:10px">
+    Please enter your user name and password. @Html.ActionLink("Register", "Register", "Account", new {@class="btn btn-info" }) if you don't have an account.
+</p>
         <fieldset>
             <legend>Account Information</legend>
 
@@ -46,3 +47,6 @@
         </fieldset>
     </div>
 }
+
+<p>Login: admin</p>
+<p>Password: 000000</p>
