--- a/Lahjapaja_CIM/Views/Customer/Delete.cshtml
+++ b/Lahjapaja_CIM/Views/Customer/Delete.cshtml
@@ -6,8 +6,8 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
+<h3>Are you sure you want to delete this customer?</h3>
+@*<fieldset>
     <legend>customer</legend>
 
     <div class="display-label">groupId</div>
@@ -44,10 +44,11 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.status)
     </div>
-</fieldset>
+</fieldset>*@
 @using (Html.BeginForm()) {
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        @*<input type="submit" value="Yes" class="btn btn-danger"/> |*@
+        @Html.ActionLink("Yes", "Index", "Customer", new {@class="btn btn-primary"})
+        @Html.ActionLink("No", "Index", "Customer", new {@class="btn btn-primary" })
     </p>
 }
