--- a/Lahjapaja_CIM/Views/Shared/_LogOnPartial.cshtml
+++ b/Lahjapaja_CIM/Views/Shared/_LogOnPartial.cshtml
@@ -1,7 +1,11 @@
 ﻿@if(Request.IsAuthenticated) {
     <text>Welcome <strong>@User.Identity.Name</strong>!
-    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
+     [@Html.ActionLink("Log Off", "LogOff", "Account")] </text>
 }
 else {
-    @:[ @Html.ActionLink("Log On", "LogOn", "Account") ]
+    @: @Html.ActionLink("Log On", "LogOn", "Account", new {@class="btn btn-primary" }) 
 }
+@*<p>
+Login: admin
+Password: 000000
+</p>*@
